# BananEngine

./: .env.cmake  .gitignore  .gitmodules  CMakeLists.txt  README.md  banan_buffer.cpp  banan_buffer.h  banan_camera.cpp  banan_camera.h  banan_descriptor.cpp  banan_descriptor.h  banan_device.cpp  banan_device.h  banan_entity_manager.cpp  banan_entity_manager.h  banan_frame_info.h  banan_game_object.cpp  banan_game_object.h  banan_image.cpp  banan_image.h  banan_logger.cpp  banan_logger.h  banan_model.cpp  banan_model.h  banan_pipeline.cpp  banan_pipeline.h  banan_procrastinated_renderer.cpp  banan_procrastinated_renderer.h  banan_renderer.cpp  banan_renderer.h  banan_renderpass.cpp  banan_renderpass.h  banan_shadow.cpp  banan_shadow.h  banan_shadow_mapper.cpp  banan_shadow_mapper.h  banan_swap_chain.cpp  banan_swap_chain.h  banan_window.cpp  banan_window.h  (+2 more)
.github/workflows/: cmake.yml
Tests/: BananEngineTest.cpp  BananEngineTest.h  KeyboardMovementController.cpp  KeyboardMovementController.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h  main.cpp
Tests/Constants/: AreaTex.h  SearchTex.h
Tests/Shaders/: blend.frag  blend.vert  calc_gaussian_blur.comp  calc_gaussian_blur.comp.glsl  calc_normal_mats.comp  edge.frag  edge.vert  gbuffer.frag  gbuffer.vert  material.frag  mrt.frag  mrt.vert  point_light.frag  point_light.vert  procrastinated.frag  quant.frag  quant.vert  resolve.frag  resolve.vert  shadow.frag  shadow.vert  triangle.frag  triangle.vert
Tests/Systems/: ComputeSystem.cpp  ComputeSystem.h  MaterialSystem.cpp  MaterialSystem.h  PointLightSystem.cpp  PointLightSystem.h  PointShadowSystem.cpp  PointShadowSystem.h  ProcrastinatedOffscreenRenderSystem.cpp  ProcrastinatedOffscreenRenderSystem.h  ProcrastinatedRenderSystem.cpp  ProcrastinatedRenderSystem.h  ResolveSystem.cpp  ResolveSystem.h  ShadowSystem.cpp  ShadowSystem.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h
core/: CMakeLists.txt  banan_buffer.cpp  banan_buffer.h  banan_camera.cpp  banan_camera.h  banan_descriptor.cpp  banan_descriptor.h  banan_device.cpp  banan_device.h  banan_frame_info.h  banan_game_object.cpp  banan_game_object.h  banan_image.cpp  banan_image.h  banan_model.cpp  banan_model.h  banan_pipeline.cpp  banan_pipeline.h  banan_renderer.cpp  banan_renderer.h  banan_renderpass.cpp  banan_renderpass.h  banan_shadow_mapper.cpp  banan_swap_chain.h  banan_window.cpp  banan_window.h
include/: Banan.h
stlext/: CMakeLists.txt  cpuinfo.cpp  cpuinfo.h  emhash_map8.hpp  emhash_set8.hpp  hash.cpp  hash.h  hash.hpp  hashmap.cpp  hashmap.h  hashtable.h  hashtable.tpp  wyhash.cpp  wyhash.h  wyhash.hpp
stlext/tests/: hash_test.cpp  hashmap_test.cpp  hashset_test.cpp
test/: BananEngineTest.cpp  BananEngineTest.h  CMakeLists.txt  KeyboardMovementController.cpp  KeyboardMovementController.h  main.cpp
test/banan_assets/: README.md
test/shaders/: calc_normal_mats.comp  gbuffer.frag  gbuffer.vert  mrt.frag  mrt.vert  point_light.frag  point_light.vert  shadow.vert  triangle.frag  triangle.vert
test/systems/: ComputeSystem.cpp  ComputeSystem.h  PointLightSystem.cpp  PointLightSystem.h  ProcrastinatedRenderSystem.cpp  ProcrastinatedRenderSystem.h  ShadowSystem.cpp  ShadowSystem.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h
